...
        android:text="5000"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#CFB53B"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buy4"
        app:layout_constraintStart_toEndOf="@+id/imageView18"
        app:layout_constraintTop_toBottomOf="@+id/price3"
        app:layout_constraintVertical_bias="0.723" />

    <ImageView
        android:id="@+id/buy4"
...
        android:layout_marginTop="28dp"
        android:src="@drawable/buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buy3" />

    <ImageView
        android:id="@+id/buy3"
        android:layout_width="124dp"
        android:layout_height="77dp"
        android:layout_marginBottom="8dp"
...
        android:layout_marginTop="12dp"
        android:src="@drawable/buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buy2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/buy2"
        android:layout_width="124dp"
        android:layout_height="77dp"
...
        android:layout_marginTop="16dp"
        android:src="@drawable/buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buy1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/price3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#CFB53B"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/price3"
        app:layout_constraintEnd_toStartOf="@+id/buy2"
        app:layout_constraintStart_toEndOf="@+id/goldXL"
        app:layout_constraintTop_toBottomOf="@+id/price1"
        app:layout_constraintVertical_bias="0.518" />

    <ImageView
        android:id="@+id/shop"
        android:layout_width="178dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/gold"
        android:layout_width="141dp"
        android:layout_height="73dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/gold1"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gold"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/car"
        android:layout_width="142dp"
        android:layout_height="84dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/car"
...
        android:id="@+id/imageView18"
        android:layout_width="138dp"
        android:layout_height="83dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/bungalow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
...
