...
        android:id="@+id/imageView3"
        android:layout_width="76dp"
        android:layout_height="67dp"
        android:layout_marginBottom="90dp"
        android:foregroundGravity="center_horizontal"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
    //TODO: TEST

...
        android:layout_marginStart="16dp"
        android:background="@drawable/login_fields_bg"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/user1"
        android:hint="Email"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/password"
...
        android:background="@drawable/login_fields_bg"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/padlock"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="61dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/login_button"
        android:text="Log in"
        android:textAllCaps="false"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />
...
